# rag-me

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/data/: sample.txt
backend/src/: bert.rs  cli.rs  database.rs  handler.rs  inference.rs  ingest.rs  lib.rs  main.rs  utils.rs
backend/src/data/: database.rs
backend/src/qa/: mod.rs
src/: app.rs  lib.rs  main.rs  utils.rs
src/ai/: embedding.rs  inference.rs  mod.rs  worker_pool.rs
src/cli/: mod.rs  runner.rs
src/data/: database.rs  ingest.rs  mod.rs
src/http/: mod.rs
src/qa/: mod.rs
src/router/: session.rs
