[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
candle-core         = "0.8.1"
candle-nn           = "0.8.1"
candle-transformers = "0.8.1"
tokenizers = "0.22.1"
clap = { version = "4.5.26", features = ["derive"] }
hf-hub = { version = "0.4.1", features = ["tokio"] }
rig-core = "0.6.1"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
lazy_static = "1.5.0"
anyhow = "1.0.95"
async_once = "0.2.6"
surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
pdf-extract = "0.8.0"
shell-words = "1.1.0"
async-trait = "0.1.89"
ratatui = "0.27"
crossterm = "0.27"

[lib]
name = "lib"
path = "src/lib.rs"
